# fastapi-mongo-survey

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: answers.py  auth.py  deps.py  questions.py  surveys.py
app/core/: config.py  database.py  time.py
app/models/: answer.py  question.py  survey.py  user.py
app/services/: auth.py  question_service.py
app/static/js/: auth.js
doc/: 01-prd.md  02-architecture.md  03-api-spec.md  04-db-design.md  05-test-cases.md  06-deployment.md  07-frontend-spec.md  AI_Chat_Log.md  AI_Chat_Log2.md
templates/: dashboard.html  editor.html  login.html  register.html  stats.html  survey_fill.html
tests/: test_auth.py  test_cross_stats.py  test_e2e.py  test_editor.py  test_extreme.py  test_filling.py  test_frontend_templates.py  test_library.py  test_question_sharing.py  test_questions.py  test_stats.py  test_surveys.py
